crates/ace-macros/tests/compile_fail/struct_tuple_unsupported.stderr
error: FrameRead requires named fields
 --> tests/compile_fail/struct_tuple_unsupported.rs:3:10
  |
3 | #[derive(FrameRead)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `FrameRead` (in Nightly builds, run with -Z macro-backtrace for more info)
